# swimbuddz-backend

./: .dockerignore  .env  .env.dev  .env.example  .env.prod  .env.prod.gpg  .gitignore  AGENT_INSTRUCTIONS.md  API_CONTRACT.md  API_ENDPOINTS.md  ARCHITECTURE.md  BRANCHING.md  CONVENTIONS.md  DEPLOYMENT.md  DEPLOY_ENV_GPG.md  MISSED_CLASS_POLICY.md  README.md  SCHEMA_REGISTRY.md  TODO.md  alembic.ini  check_db.py  check_db_tables.py  clear_alembic.py  conftest.py  constraints.txt  create_dynamic_sessions.py  create_sessions.py  debug_routes.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  verify_registration.py
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
alembic/: README.md  env.py
alembic/versions/: 2e5028f815c0_add_academy_service_models.py  35100a7c1b2d_add_member_profile_columns.py  4006ff8a671b_initial_migration_members.py  4ce6faae9397_initial_setup.py  699858cde72f_add_tier_fields_and_volunteer_challenge_.py  6b1d29fce9bc_initial_setup.py  8992845f9a9d_add_ride_share_option.py  a1b2c3d4e5f6_add_media_service_tables.py  a91a5b70ad47_add_attendance.py  acce2ce071fe_add_pickup_location.py  b4289c6b41b7_add_pending_registrations.py  b58e54d8377b_add_payments.py  b9bb8441004b_add_sessions.py  f85c085475a6_add_announcements.py  update_session_location_enum.py
docs/: AGENT_INSTRUCTIONS.md  API_ENDPOINTS.md  API_TYPE_GENERATION.md  ARCHITECTURE.md  BRANCHING.md  CONVENTIONS.md  DEPLOYMENT.md  DEPLOY_ENV_GPG.md  LEDGER_PROD_RUNBOOK.md  RESTRUCTURING_TODO.md
docs/academy/: MISSED_CLASS_POLICY.md
docs/tests/: TESTING_AGENT_PROMPT.md  TESTING_ARCHITECTURE.md  TESTING_IMPLEMENTATION_GUIDE.md
libs/: __init__.py
libs/auth/: dependencies.py  models.py
libs/common/: arq_config.py  audit.py  config.py  currency.py  datetime_utils.py  email.py  enums.py  error_handler.py  exceptions.py  health.py  ledger_client.py  logging.py  media_utils.py  member_utils.py  middleware.py  pagination.py  pdf.py  principals.py  rate_limit.py  redis.py  service_client.py  supabase.py  validation_cache.py
libs/db/: config.py  session.py
libs/moderation/: README.md  __init__.py  image.py  text.py  types.py
mcp/: README.md
mcp/swimbuddz_core_mcp/: __init__.py  server.py  tools.py
reports/seasonality/: SEASONALITY_CALENDAR_2026.csv  SEASONALITY_MODEL_2026.md  seasonality_report_2026.html
scripts/: README.md  backup_migrations.sh  check_db_tables.py  create_admin.py  create_dynamic_sessions.py  debug_routes.py  full_reset.sh  full_reset_all.sh  generate_openapi.py  preview_card.py  schedule_content_posts.py  test_brevo_smtp.py  update_program_text.py
scripts/api/: generate-endpoints-doc.py  generate-openapi.py
scripts/auth/: backfill-members.py  clear-member.py  clear-users.py  create-admin.py
scripts/database/: check_db_tables.py  clear_alembic.py  generate_migration.sh  nuke_db.py  reset_db.sh
scripts/db/: backfill_session_pool_ids.py  backup-migrations.sh  clear-alembic.py  full-reset-all.sh  full-reset.sh  generate-schema-doc.py  migrate-prod.sh  migrate.sh  nuke.py  reset-no-auth.sh  reset.sh  status.py
scripts/docker/: build-push.sh
scripts/ledger/: backfill_payments.py  ingest_settlements.py  replay_ledger_failures.py  run_recognition.py  wallet_promo_opening.py
scripts/lint/: check_file_sizes.sh
scripts/migrate/: VOLUNTEER_MIGRATION_RUNBOOK.md  drop_legacy_volunteer_tables.py  volunteer_data.py
scripts/seed/: agreement.py  ai_config.py  all.sh  announcements.py  chat_safeguarding.py  cohort.py  content-posts.py  handbook.py  ledger_org.py  program.py  reward_rules.py  store_service.py  volunteers.py  wallets.py
scripts/seed-data/: announcements.json  content_posts.json  freestyle_beginner.json
scripts/seeding/: announcement.json  clean_beginner_program.py  create_dynamic_sessions.py  freestyle_beginner.json  seed_academy_data.py  seed_all.sh  seed_announcements.py  seed_content_posts.py  seed_discounts.py  seed_program.py
scripts/strokelab/: setup_buckets.py
scripts/users/: clear_supabase_users.py  create_admin.py
scripts/volunteer/: backfill_volunteer_profiles.py
scripts/wallet/: backfill_paid_member_wallets.py
services/: __init__.py
services/academy_service/: Dockerfile  README.md  alembic.ini  coach_assignment_router.py  curriculum_router.py  curriculum_schemas.py  installments.py  models.py  router.py  schemas.py  self_enroll_schema.py  tasks.py  worker.py
services/ai_service/: Dockerfile  __init__.py  alembic.ini  constants.py  router.py  schemas.py
services/attendance_service/: Dockerfile  README.md  alembic.ini  internal_router.py  models.py  router.py  schemas.py  seed_locations.py  tasks.py  worker.py
services/chat_service/: Dockerfile  README.md  alembic.ini
services/communications_service/: Dockerfile  README.md  alembic.ini  email_router.py  messaging_router.py  models.py  router.py  schemas.py  tasks.py  worker.py
services/corporate_service/: Dockerfile  __init__.py  alembic.ini  auth.py  worker.py
services/events_service/: Dockerfile  README.md  __init__.py  alembic.ini  models.py  router.py  schemas.py
services/gateway_service/: Dockerfile  README.md
services/ledger_service/: Dockerfile  __init__.py  alembic.ini  worker.py
services/media_service/: Dockerfile  README.md  __init__.py  alembic.ini  models.py  requirements.txt  router.py  schemas.py  storage.py
services/members_service/: Dockerfile  README.md  __init__.py  alembic.ini  coach_router.py  coach_schemas.py  models.py  router.py  schemas.py  service.py  volunteer_router.py  volunteer_schemas.py
services/payments_service/: Dockerfile  README.md  alembic.ini  models.py  payout_router.py  paystack_client.py  router.py  schemas.py  tasks.py  worker.py
services/pools_service/: Dockerfile  __init__.py  alembic.ini  worker.py
tests/: conftest.py  factories.py  test_db.py  test_members_service.py  test_registration_flow.py  test_seasonality_calendar.py  test_seasonality_model.py  test_seasonality_renderer.py  test_session_delete.py  test_session_stats.py
(+1267 files in other folders)
