[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimbuddz-backend"
version = "0.1.0"
description = "SwimBuddz backend monorepo (FastAPI + SQLAlchemy async stack)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<0.112",
    "uvicorn[standard]>=0.27,<0.30",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "httpx[http2]>=0.26,<0.28",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    # Media service specific
    "supabase>=2.0,<3.0",
    "boto3>=1.34,<2.0",
    "Pillow>=10.0,<12.0",
    "python-multipart>=0.0.6,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2,<0.5",
]

[tool.setuptools.packages.find]
include = ["libs*", "services*", "mcp*", "alembic*"]

[tool.ruff.lint]
ignore = ["E402"]
