[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimbuddz-backend"
version = "0.1.0"
description = "SwimBuddz backend monorepo (FastAPI + SQLAlchemy async stack)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<0.112",
    "uvicorn[standard]>=0.27,<0.30",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "httpx[http2]>=0.26,<0.28",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    # Media service specific
    "supabase>=2.0,<3.0",
    "boto3>=1.34,<2.0",
    "Pillow>=10.0,<12.0",
    "python-multipart>=0.0.6,<0.1.0",
    # Cross-service validation cache
    "redis>=5.0,<6.0",
    # Rate limiting
    "slowapi>=0.1.9,<0.2.0",
    # Task scheduling
    "arq>=0.25,<1.0",
    # AI provider abstraction
    "litellm>=1.30,<2.0",
    # AI observability
    "langfuse>=2.0,<3.0",
    # PDF generation for academy certificates/reports
    "reportlab>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2,<0.5",
    "pytest-cov>=5.0,<6.0",
]

[tool.setuptools.packages.find]
include = ["libs*", "services*", "mcp*", "alembic*"]

[tool.ruff]
extend-exclude = [
    "alembic/versions",
    "services/*/alembic/versions",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"services/academy_service/routers/admin_tasks.py" = ["F405"]
"services/academy_service/routers/coach_dashboard.py" = ["F405"]
"services/academy_service/routers/cohorts.py" = ["F405"]
"services/academy_service/routers/enrollments.py" = ["F405"]
"services/academy_service/routers/internal.py" = ["F405"]
"services/academy_service/routers/programs.py" = ["F405"]
"services/academy_service/routers/progress.py" = ["F405"]
"services/academy_service/routers/reports.py" = ["F405"]
"services/academy_service/routers/scoring.py" = ["F405"]
