[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimbuddz-backend"
version = "0.1.0"
description = "SwimBuddz backend monorepo (FastAPI + SQLAlchemy async stack)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109,<0.112",
    "uvicorn[standard]>=0.27,<0.30",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "httpx[http2]>=0.26,<0.28",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
    "psycopg[binary]>=3.1,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    # Media service specific
    "supabase>=2.0,<3.0",
    "boto3>=1.34,<2.0",
    "Pillow>=10.0,<12.0",
    "qrcode[pil]>=7.4,<9.0",
    "python-multipart>=0.0.6,<0.1.0",
    # Cross-service validation cache
    "redis>=5.0,<6.0",
    # Rate limiting
    "slowapi>=0.1.9,<0.2.0",
    # Task scheduling
    "arq>=0.25,<1.0",
    # AI provider abstraction
    "litellm>=1.30,<2.0",
    # AI observability
    "langfuse>=2.0,<3.0",
    # PDF generation for academy certificates/reports
    "reportlab>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2,<0.5",
    "pytest-cov>=5.0,<6.0",
]
# Stroke Lab — swim-video analyser (YOLOv8 + MediaPipe pose). HEAVY:
# ultralytics pulls torch (~600MB on arm64). Kept out of the base
# `dependencies` so non-AI services don't pay the cost on every build.
# Only the ai_service Dockerfile installs this extra (`.[strokelab]`).
#
# Version notes:
#   * mediapipe linux-arm64 wheels currently top out at 0.10.18 — keep
#     the floor below that so docker arm64 builds resolve. macOS dev
#     boxes will still pick up newer wheels naturally.
#   * ultralytics + opencv-python-headless versions are aligned with
#     what was validated in the Week 1 kill-gate on 2026-05-13.
#   * ffmpeg system binary is required separately
#     (apt install ffmpeg in services/ai_service/Dockerfile).
strokelab = [
    "ultralytics>=8.3,<9.0",
    "mediapipe>=0.10.13,<0.11",
    "opencv-python-headless>=4.10,<5.0",
    "ffmpeg-python>=0.2,<0.3",
]

[tool.setuptools.packages.find]
include = ["libs*", "services*", "mcp*", "alembic*"]

# Ship non-Python data files that live inside packages. The ledger
# chart-of-accounts templates (coa_templates/*.yaml) are read at seed time by
# seed_chart_of_accounts(); without this, `pip install .` copies only .py files
# and the YAML is absent from site-packages, so seeding a fresh environment
# fails with FileNotFoundError (the running service is unaffected — it only
# reads the YAML when seeding). Add a new entry here for any future packaged
# data file (e.g. other CoA verticals).
[tool.setuptools.package-data]
"services.ledger_service" = ["coa_templates/*.yaml"]

[tool.ruff]
extend-exclude = [
    "alembic/versions",
    "services/*/alembic/versions",
]

[tool.ruff.lint]
ignore = ["E402"]
